--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,17 @@
-# Node
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+# Dependencies
+**/node_modules
+**/package-lock.json
 
-# Angular
-frontend/dist/
-frontend/.angular/
-frontend/node_modules/
+# Angular specific
+frontend/dist
+frontend/.angular
 
-# Backend
-node-mysql-backend/node_modules/
+# IDEs
+**/.idea
+**/.vscode
+**/*.sublime-*
 
-# IDE
-.idea/
-.vscode/
-*.sublime-*
-
-# System Files
-.DS_Store
-Thumbs.db
+# Misc
+**/.DS_Store
+**/Thumbs.db
+**/*.log
